chore: fix scrollbar width

--- a/src/scss/ImageSlider.scss
+++ b/src/scss/ImageSlider.scss
@@ -1,4 +1,5 @@
 .image-slider {
+  margin-bottom: 1rem;
   ul {
     display: flex;
     overflow: scroll;
