--- a/src/scss/PostDetail.scss
+++ b/src/scss/PostDetail.scss
@@ -7,6 +7,7 @@
 }
 
 .comment-input-area {
+  margin-top: 1rem;
   width: 100%;
   height: 5rem;
   display: flex;
