--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,20 @@ body {
   }
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 1rem;
+    background-color: #aaa;
+  }
+  &::-webkit-scrollbar-button {
+    width: 0;
+    height: 0;
+  }
 }
 
 code {
